--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -13,6 +13,14 @@ body {
 
 .brand {
   cursor: pointer;
+  a {
+    text-decoration: none;
+    color: saddlebrown;
+  }
+}
+
+.reg-form {
+  border: 2px black dotted;
 }
 
 // * {
